--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,6 +26,8 @@ coroutines_version = "1.8.1"
 arch_component_version = "2.8.0"
 #CircleImageView
 circle_image_version = "3.1.0"
+#ExoPlayer
+exo_palyer_version = "2.14.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -62,8 +64,10 @@ viewmodel-component = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", v
 livedata-component = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "arch_component_version"}
 #Circle Image View
 circle-image = { module = "de.hdodenhof:circleimageview", version.ref = "circle_image_version"}
-
+#ExoPlayer
+exo-player = {module = "com.google.android.exoplayer:exoplayer",version.ref = "exo_palyer_version"}
 [bundles]
+exo-component = ["exo-player"]
 ui-component = ["androidx-core-ktx", "androidx-appcompat", "material", "androidx-activity", "androidx-constraintlayout", "glide", "circle-image"]
 test-component = ["junit", "androidx-junit", "androidx-espresso-core"]
 network-component = ["retrofit", "retrofit-converter", "coroutines-android", "coroutines-core", "viewmodel-component", "livedata-component"]
